--- a/ICS-Testing/AndroidManifest.xml
+++ b/ICS-Testing/AndroidManifest.xml
@@ -3,7 +3,8 @@
       package="com.udinic.ics_testing"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+    <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="17"/>
+    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" >
         <activity android:name=".CalendarActivity"
                   android:label="@string/app_name">
             <intent-filter>
@@ -12,7 +13,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".CalendarEventsActivity"/>
+
+        <service android:name=".CalendarService" android:exported="false" android:description="@string/service_desc"/>
     </application>
+
+
     <uses-permission android:name="android.permission.READ_CALENDAR"></uses-permission>
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
 
 </manifest>
