--- a/ICS-Testing/AndroidManifest.xml
+++ b/ICS-Testing/AndroidManifest.xml
@@ -1,24 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.udinic.ics_testing"
-      android:versionCode="1"
-      android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="17"/>
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" >
-        <activity android:name=".CalendarActivity"
-                  android:label="@string/app_name">
+          package="com.udinic.ics_testing"
+          android:versionCode="1"
+          android:versionName="1.0">
+
+    <uses-sdk
+            android:minSdkVersion="14"
+            android:targetSdkVersion="17"/>
+    <application
+            android:label="@string/app_name"
+            android:icon="@drawable/ic_launcher">
+        <activity
+                android:name=".CalendarActivity"
+                android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity android:name=".CalendarEventsActivity"/>
 
-        <service android:name=".CalendarService" android:exported="false" android:description="@string/service_desc"/>
+        <service
+                android:name=".CalendarService"
+                android:exported="false"
+                android:description="@string/service_desc"/>
+
+        <receiver android:name=".EventReminderReceiver" >
+            <intent-filter>
+                <action android:name="android.intent.action.EVENT_REMINDER"/>
+            </intent-filter>
+
+        </receiver>
+
+
     </application>
 
 
     <uses-permission android:name="android.permission.READ_CALENDAR"></uses-permission>
+    <uses-permission android:name="android.permission.WRITE_CALENDAR"></uses-permission>
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
 
 </manifest>
