--- a/ICS-Testing/AndroidManifest.xml
+++ b/ICS-Testing/AndroidManifest.xml
@@ -9,6 +9,7 @@
             android:targetSdkVersion="17"/>
     <application
             android:label="@string/app_name"
+            android:debuggable="true"
             android:icon="@drawable/ic_launcher">
         <activity
                 android:name=".CalendarActivity"
@@ -19,26 +20,50 @@
             </intent-filter>
         </activity>
         <activity android:name=".CalendarEventsActivity"/>
+        <activity android:name=".listeners.EventListenerActiviry">
+            <intent-filter>
+                <action android:name="android.provider.calendar.action.HANDLE_CUSTOM_EVENT" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="vnd.android.cursor.item/event" />
+            </intent-filter>
+        </activity>
 
         <service
                 android:name=".CalendarService"
                 android:exported="false"
                 android:description="@string/service_desc"/>
 
-        <receiver android:name=".EventReminderReceiver" >
+        <!--<receiver android:name=".EventReminderReceiver" >-->
+            <!--&lt;!&ndash;<intent-filter>&ndash;&gt;-->
+                <!--&lt;!&ndash;<action android:name="android.intent.action.EVENT_REMINDER" />&ndash;&gt;-->
+                <!--&lt;!&ndash;<data android:mimeType="vnd.android.cursor.item/calendar-alert" />&ndash;&gt;-->
+            <!--&lt;!&ndash;</intent-filter>&ndash;&gt;-->
             <!--<intent-filter>-->
                 <!--<action android:name="android.intent.action.EVENT_REMINDER" />-->
-                <!--<data android:mimeType="vnd.android.cursor.item/calendar-alert" />-->
+                <!--&lt;!&ndash;<action android:name="android.intent.action.LOCALE_CHANGED" />&ndash;&gt;-->
+                <!--&lt;!&ndash;<action android:name="android.intent.action.BOOT_COMPLETED" />&ndash;&gt;-->
+                <!--&lt;!&ndash;<action android:name="android.intent.action.TIME_SET" />&ndash;&gt;-->
+                <!--<data android:scheme="content" />-->
             <!--</intent-filter>-->
+        <!--</receiver>-->
+
+        <receiver android:name=".listeners.EventReminderReceiver" >
             <intent-filter>
                 <action android:name="android.intent.action.EVENT_REMINDER" />
-                <action android:name="android.intent.action.LOCALE_CHANGED" />
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.TIME_SET" />
                 <data android:scheme="content" />
             </intent-filter>
-
+            <intent-filter>
+                <action android:name="android.intent.action.LOCALE_CHANGED" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.PROVIDER_CHANGED"/>
+                <data android:scheme="content"/>
+                <data android:host="com.android.calendar"/>
+            </intent-filter>
         </receiver>
+
 
         <service android:name=".ReminderService" >
             <intent-filter>
@@ -46,6 +71,11 @@
             </intent-filter>
         </service>
 
+        <service android:name=".CalendarDumpService" android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+            </intent-filter>
+        </service>
     </application>
 
 
