--- a/GeneralTestings/AndroidManifest.xml
+++ b/GeneralTestings/AndroidManifest.xml
@@ -39,7 +39,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RandomStuff">
+        <activity android:name=".RandomStuff" android:label="RandomStuff">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
