--- a/GeneralTestings/AndroidManifest.xml
+++ b/GeneralTestings/AndroidManifest.xml
@@ -5,7 +5,7 @@
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="17"/>
 
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:supportsRtl="true">
         <activity android:name="MyActivity"
                   android:launchMode="singleTask"
                   android:label="@string/app_name">
