--- a/GeneralTestings/AndroidManifest.xml
+++ b/GeneralTestings/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="17"/>
 
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:supportsRtl="true">
-        <activity android:name="MyActivity"
+        <activity android:name=".FingerControl"
                   android:launchMode="singleTask"
                   android:label="@string/app_name">
             <intent-filter>
@@ -15,6 +15,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".MyActivity2"/>
+        <activity android:name=".FingerControl">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
         <activity android:name=".ContactsViewer">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
