added content provider testing to anydo.

--- a/GeneralTestings/AndroidManifest.xml
+++ b/GeneralTestings/AndroidManifest.xml
@@ -62,6 +62,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ContentProviderActivity" android:label="ContentProvider">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <activity android:name=".Login"
                   android:label="Video demo">
@@ -94,5 +100,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="com.anydo.provider.permission.READ_ANYDO_TASKS" />
 
 </manifest>
