--- a/GeneralTestings/AndroidManifest.xml
+++ b/GeneralTestings/AndroidManifest.xml
@@ -96,10 +96,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <receiver android:name=".TasksRefreshedReceiver">
+            <intent-filter>
+                <action android:name="com.anydo.intent.INTENT_ACTION_TASKS_REFRESHED"/>
+            </intent-filter>
+        </receiver>
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="com.anydo.provider.permission.READ_ANYDO_TASKS" />
+<uses-permission android:name="com.anydo.provider.permission.READ_ANYDO_TASKS" />
 
 </manifest>
